--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </div>
     </header>
 
+    <div class="advertorial">
+        <strong>Advertorial</strong>
+    </div>
+
     <main class="page_main">
         <section class="max-width">
             <article class="main_news">
@@ -84,7 +88,7 @@
                                     <img src="src/image/image-04.webp" alt="Pesquisa Americana">
                                     <figcaption>
                                         <i class="fa fa-camera"></i>
-                                        Pesquisa Americana mostra que 1 a cada 3 homens no mundo sofre com a impotência (Foto: Reprodução/Carlos Nascimento)
+                                        Pesquisa Americana mostra que 1 a cada 3 homens no mundo sofre com a impotência.
                                     </figcaption>
                                 </figure>
                             </a>
@@ -103,7 +107,7 @@
                                     <img src="src/image/image-05.webp" alt="Depoimento">
                                     <figcaption>
                                         <i class="fa fa-camera"></i>
-                                        Luiz Franscisco, 56 anos de Lagoa da Prata (MG), recuperou sua potência depois de 3 meses de tratamento. (Foto: Facebook)
+                                        Luiz Franscisco, 56 anos de Lagoa da Prata (MG), recuperou sua potência depois de 3 meses de tratamento.
                                     </figcaption>
                                 </figure>
                             </a>
@@ -130,7 +134,7 @@
                                 <img src="src/image/image-06.webp" alt="Frasco Gota do Himalaia">
                                 <figcaption>
                                     <i class="fa fa-camera"></i>
-                                    Yaksumba Gota do himalaia promove a solução da Impotência já nos primeiros dias de tratamento. (Foto: Reprodução FDA/Murilo Serra)
+                                    Yaksumba Gota do himalaia promove a solução da Impotência já nos primeiros dias de tratamento.
                                 </figcaption>
                             </figure>
                         </a>
@@ -152,7 +156,7 @@
                                 <img src="src/image/image-07.webp" alt="Gota Himalaia">
                                 <figcaption>
                                     <i class="fa fa-camera"></i>
-                                    Testes realizados comparando o Gota do Himalaia a outras duas fórmulas que estão em alta no Brasil. (Dados: Laboratório Brasil LTDA/SP)
+                                    Testes realizados comparando o Gota do Himalaia a outras duas fórmulas que estão em alta no Brasil.
                                 </figcaption>
                             </figure>
                         </a>
@@ -174,7 +178,7 @@
                                 <img src="src/image/image-08.webp" alt="Resultado">
                                 <figcaption>
                                     <i class="fa fa-camera"></i>
-                                    Laboratório especializado em Impotência Maculina, no centro de pesquisas do Gota do Himalaia, na cidade do Texas. (Foto: Reprodução/Murilo Serra)
+                                    Impotência Maculina, Gota do Himalaia.
                                 </figcaption>
                             </figure>
                         </a>
