--- a/index.html
+++ b/index.html
@@ -306,16 +306,58 @@
         <div class="max-width">
             <div class="box_copy">
                 <div class="text_copy">
-                    <em class="company_cnpj">
-                        CNPJ – 38.584.945/0001-33 | BIOLAX PRODUTOS NATURAIS EIRELI
-                    </em>
+                    <div class="box_terms_and_security">
+                        <a href="AQUI VAI O LINK POLíTICA DE PRIVACIDADE" target="_parent" rel="internal">
+                            Políticas de Privacidade
+                        </a>
+                    </div>
 
-                    <em class="description_product">Este produto é composto por ingredientes naturais e aprovado pela Anvisa nos termos da RDC27/2010 e 240/2018, sendo dispensado de registro, pois é avaliado como 100% seguro para o consumo da população, garantindo sua eficácia e qualidade. Resultados podem variar por pessoa.</em>
+                    <div class="box_company">
+                        <em class="company_cnpj">
+                            CNPJ – 38.584.945/0001-33 | BIOLAX PRODUTOS NATURAIS EIRELI
+                        </em>
+
+                        <em class="description_product">Este produto é composto por ingredientes naturais e aprovado pela Anvisa nos termos da RDC27/2010 e 240/2018, sendo dispensado de registro, pois é avaliado como 100% seguro para o consumo da população, garantindo sua eficácia e qualidade. Resultados podem variar por pessoa.</em>
+                    </div>
                 </div>
-                        
-                <abbr title="Todos os Direitos Reservados">
-                    <em class="copy_right">© Copyright 2000 - 2022 Gota do Himalaia.</em>
-                </abbr> 
+
+                <div class="box_copy_right">
+                    <abbr title="Todos os Direitos Reservados">
+                        <em class="copy_right">© Copyright 2000 - 2022 Gota do Himalaia.</em>
+                    </abbr> 
+
+                    <ul>
+                        <li>
+                            <a href="">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-whatsapp"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <i class="fab fa-pinterest-p"></i>
+                            </a>
+                        </li>
+                    </ul>    
+                </div>     
             </div>
         </div>
     </footer>
